package src.logic;

public enum TeamColor {
    BLACK, WHITE
}
