package src.logic.gameState;

public enum GameStatus {
    TeamAWon,
    TeamBWon,
    Draw,
    InProgress
}
