package src.logic.moveRules;

public enum MoveType {
    INVALID,
    BASIC,
    CASTLED_KINGSIDE,
    CASTLED_QUEENSIDE,
    JUMP,
    MULTI_JUMP,
}
